# image_udp_transport

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: receiver_demo.cpp  sender_demo.cpp
include/: ImageReceiver.h  ImageSender.h  TransportTypes.h
src/network/: logger.h  udp_operation.cpp  udp_operation.h
src/protocol/: UdpHeader.h
src/receiver/: UdpReceiverImpl.cpp  UdpReceiverImpl.h
src/sender/: UdpSenderImpl.cpp  UdpSenderImpl.h
